--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 margin: 0;
             }
 
-            #footnote {
+            div.footnote {
                 font-size: small;
                 text-align: center;
             }
@@ -29,8 +29,11 @@
     </head>
     <body>
         <iframe src="admiral_powerslave/index.html" frameborder="0" scrolling="no" width="100%" onload="resizeIframe(this)"></iframe>
-        <div id="footnote">
+        <div class="footnote">
             This is just a mirror of the content that used to be hosted at http://home.comcast.net/~admiral_powerslave/mainindex.html
+        </div>
+        <div class="footnote">
+            The source repository is at <a href="https://github.com/jonas-schievink/powerslave-mirror">https://github.com/jonas-schievink/powerslave-mirror</a>
         </div>
     </body>
 </html>
