Remove mainindex from link (again)

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <body>
         <iframe src="admiral_powerslave/index.html" frameborder="0" scrolling="no" width="100%" onload="resizeIframe(this)"></iframe>
         <div class="footnote">
-            This is just a mirror of the content that used to be hosted at http://home.comcast.net/~admiral_powerslave/mainindex.html
+            This is just a mirror of the content that used to be hosted at http://home.comcast.net/~admiral_powerslave/
         </div>
         <div class="footnote">
             The source repository is at <a href="https://github.com/jonas-schievink/powerslave-mirror">https://github.com/jonas-schievink/powerslave-mirror</a>
